--- a/messenger/darkmode.css
+++ b/messenger/darkmode.css
@@ -1,966 +1,73 @@
-/** Transitions **/
-._4sp8,
-._4eby,
-._59s7,
-._3s-4,
-._2y8_,
-._1sk6,
-._4gd0,
-._5pw9,
-._58ahm,
-._4x7m,
-._80cm,
-._80co,
-._8i1,
-._3egs,
-._5r8a._5r8b {
-    transition: background 0.5s !important;
+:root, .__fb-light-mode {
+    --card-background: #1e1e1e;
+    --comment-background: #292929;
+    --card-background-flat: #292929;
+    --disabled-button-background: #373737;
+    --divider: #4d4d4d;
+    --hosted-view-selected-state: #1D2731;
+    --hover-overlay: rgba(255, 255, 255, 0.05);
+    --media-inner-border: rgba(255, 255, 255, 0.1);
+    --messenger-card-background: #1e1e1e;
+    --overlay-alpha-80: rgba(41, 41, 41, 0.8);
+    --popover-background: #1e1e1e;
+    --primary-icon: #cecece;
+    --primary-text: #cecece;
+    --scroll-thumb: #5d5d5d;
+    --secondary-button-background: #353535;
+    --secondary-icon: #999;
+    --secondary-text: #999;
+    --shadow-1: rgba(0, 0, 0, 0.3);
+    --shadow-2: rgba(0, 0, 0, 0.4);
+    --shadow-5: rgba(0, 0, 0, 0.7);
+    --shadow-8: rgba(0, 0, 0, 1);
+    --shadow-inset: rgba(000, 000, 000, 0.5);
+    --surface-background: #1e1e1e;
+    --wash: #373737;
+    --web-wash: #1e1e1e;
 }
 
 body {
-    -webkit-transition: background 0.5s, color 0.5s !important;
+    color: #cecece;
 }
 
-._2y8_,
-._5i_d,
-._3wb1,
-._3way {
-    transition: border 0.5s !important;
+/* Delivered icon on left*/
+.rq0escxv.l9j0dhe7.du4w35lb.j83agx80.cbu4d94t.pfnyh3mw.d2edcug0.hpfvmrgz.aovydwv3.p8cu3f6v.kb5gq1qc.taijpn5t.b0upgy8r path, .l9j0dhe7.swg4t2nn path, .a8c37x1j.ms05siws.hwsy1cff.b7h9ocf4 path {
+    fill: #cecece;
 }
 
-._53ij {
-    transition: background 0.5s, border 0.5s !important;
+path[d="M0 36h36V0H0z"] {
+    fill: none !important;
 }
 
-._673w,
-._36ic,
-._374b,
-._2y8y,
-._llj,
-._2c9i ._4ebz,
-._4dx4,
-._koh {
-    transition: border-bottom 0.5s !important;
+/* Icons */
+path[d="M18 30c-6.627 0-12-5.372-12-12 0-6.627 5.373-12 12-12 6.628 0 12 5.373 12 12 0 6.628-5.372 12-12 12zm5.294-16.707l-7.296 7.295-3.254-3.252c-.352-.353-.919-.439-1.323-.148a1 1 0 00-.128 1.522l3.998 3.997a1 1 0 001.414 0l8.002-8.001a1 1 0 10-1.413-1.413z"] {
+    fill: #999;
 }
 
-._1t2u,
-._4_j5 {
-    transition: border-left 0.5s !important;
+.sp_o5t_XtHjhxN_1_5x {
+    filter: invert(.8);
 }
 
-._4rv3,
-._1li-,
-._3war,
-._3wax {
-    transition: border-top 0.5s !important;
+/* App download */
+.oajrlxb2.q2y6ezfg.gcieejh5.bn081pho.humdl8nn.izx4hr6d.rq0escxv.nhd2j8a9.j83agx80.p7hjln8o.kvgmc6g5.cxmmr5t8.oygrvhab.hcukyx3x.jb3vyjys.d1544ag0.qt6c0cv9.tw6a2znq.i1ao9s8h.esuyzwwr.f1sip0of.lzcic4wl.l9j0dhe7.abiwlrkh.p8dawk7l.beltcj47.p86d2i9g.aot14ch1.kzx2olss.cbu4d94t.taijpn5t.ni8dbmo4.stjgntxs.k4urcfbm.tv7at329 {
+    background: #1e1e1e;
 }
 
-._3m31:nth-of-type(3n+1) {
-    transition: border-right 0.5s !important;
+.sn0e7ne5 {
+    box-shadow: rgba(0, 0, 0, 0.6) 0px 0px 2px;
 }
 
-._3m31:nth-of-type(3n+2) {
-    transition: border-left 0.5s, border-right 0.5s !important;
+/* Middle header */
+.bafdgad4 {
+    box-shadow: 0 0 4px rgba(0,0,0,.7)
 }
 
-._3m31:nth-of-type(3n+3) {
-    transition: border-left 0.5s !important;
+/* Pop-up close icon */
+.sp_GOPGoqMu6Pq_1_5x {
+    filter: invert(.8);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-textarea,
-keygen,
-select,
-._2v6o,
-._5eu7,
-._3eus,
-._5uh,
-._3x6v,
-._5rh4,
-._5qsj,
-._497p,
-._5i_d .__6m,
-._1r3o,
-._374c,
-._3q35,
-._2y8z,
-._2mjl,
-._1n-e,
-._4dx5,
-._38wl,
-._4x7m,
-._4x79,
-._4x7b,
-body,
-._3szq,
-._4rph ._4rpj,
-._364g,
-._2jnv,
-._2jnx,
-._2jnz,
-._2jnx ._30e7 ._5j5f,
-._5i_d .__6k,
-._5i_d .__6l,
-._3wa-,
-._3wb0,
-._2c9i ._19jt,
-._4ng2,
-._3q34,
-._36zg,
-._hh7 a:not(_ih-),
-._3eur._6ybk a,
-label,
-._618l,
-._618n,
-._6cs7,
-._koh li:not(.selected),
-._517h,
-._1suj,
-._1suk,
-.uiInputLabel .__rm+.uiInputLabelLabel,
-._7492,
-._5iwm ._58al::placeholder,
-._5pwa,
-._5pw6,
-._58al,
-._74ku,
-._7q1q,
-._7ht_,
-._6ct8._6y58,
-._6zkf,
-.__6k,
-.__6l,
-.__6m,
-._3b4u,
-._1mr_,
-._1mq-,
-._2f5n ._29ey,
-._67tw,
-._4lh7,
-._3z53,
-._50f9,
-._1jx6,
-._1jw-,
-._50cx:not(._50cy),
-._51l0 ._1-sv,
-._217a ._t5c ._5jdu,
-._217a ._t5c ._5jdu._42fr {
-    transition: color 0.5s !important;
-}
-
-._1ht1:active ._6zkf {
-    transition: color 0.0s !important;
-}
-
-._225b,
-._jf4 ._jf3,
-._o46:not(._nd_) ._454y ._1mj0 {
-    transition: background-color 0.5s, color 0.5s !important;
-}
-
-hr {
-    transition: background 0.5s, color 0.5s !important;
-}
-
-._33p7 {
-    transition: background-color 0.5s, border-bottom 0.5s !important;
-}
-
-._2615,
-._1ht1._1ht2,
-._1hbw ._5pd7,
-._4-hy ._3ixn,
-._7jxv,
-._5iwm ._58al,
-._6ymu,
-._6-xp,
-._6ybv,
-._6y56,
-._6ybz:not(._7ipg),
-._7hu0,
-._7hty,
-._7-_v,
-._1ht1._1ht2 ._6zkc,
-._7hu1,
-._5irm._7mkm,
-._7kpk,
-._3b4h,
-._3rh0,
-._3z54,
-._49no {
-    transition: background-color 0.5s !important;
-}
-
-._5pw9,
-._58ah,
-._7q0v,
-._7q1i,
-._7q1l,
-._7q1m,
-._7q1n,
-._71bm._71bn,
-._71bo._71bm:hover,
-._3b4t,
-._2m5p {
-    transition: border-color 0.5s !important;
-}
-
-._1ht1:active ._7q1i,
-._1ht1:active ._7q0v {
-    transition: border-color 0.0s !important;
-}
-
-._7q1p,
-._2f5n,
-.__6j._43kk,
-._ric,
-._4mnq {
-    transition: background-color 0.5s, border-color 0.5s !important;
-}
-
-._3nta {
-    transition: background 0.5s, border-bottom 0.5s !important;
-}
-
-._3nta:hover {
-    transition: background-color 0.0s !important;
-}
-
-._4rv6,
-a._4ce_ {
-    transition: filter 0.5s, opacity 0.5s !important;
-}
-
-mask+rect,
-path#Fill-1,
-path#Fill-2,
-path#Fill-8,
-path#Fill-19,
-path#Fill-23,
-path#Fill-24,
-._80cm ._7oal path {
-    transition: fill 0.5s !important;
-}
-
-._7i2l path#Fill-1 {
-    transition: fill 0.0s !important;
-}
-
-._7i2n path#Fill-19 {
-    transition: fill 0.0s !important;
-}
-
-._7301._hh7,
-._7301._hh7._hh7._6ybn {
-    transition: background-color 0.5s, border-color 0.5s, color 0.5s !important;
-}
-
-._18p0,
-._1jx4 {
-    transition: border-top-color 0.5s !important;
-}
-
-._41ud ._o46:not(._nd_) ._hh7:not(._2f5r):not(._7301),
-._29_7 ._3czg ._2e-7 ._2e-1,
-._29_7 ._3czg ._2e-7 ._2e-2,
-input:not(._5eay):not(._1frb):not(._58al) {
-    transition: background-color 0.5s, color 0.5s !important;
-}
-
-._aou,
-._4kf5,
-._4kf6:not(._fy2) {
-    transition: background 0.5s, color 0.5s !important;
-}
-
-._4k7a {
-    transition: color 0.5s !important;
-}
-
-._4dfu {
-    transition: background-image 0.5s !important;
-}
-
-._44ju ._44jz {
-    transition: color 0.5s !important;
-}
-
-._44ju {
-    transition: text-decoration-color 0.5s !important;
-}
-
-._kmc ._1p1t {
-    transition: color 0.5s !important;
-}
-
-._7mki {
-    transition: background-color 0.5s, transform .22s cubic-bezier(.5, 0, .4, 1) !important;
-}
-
-._7t1o {
-    transition: background-color 0.5s, transform .25s !important;
-}
-
-._kmc._7kpg ._1p1t {
-    transition: color 0.5s !important;
-}
-
-._71bm {
-    transition: none !important;
-}
-
-._4_j4 .chatAttachmentShelf {
-    transition: background-color 0.5s, border-top-color 0.5s !important;
-}
-
-._56jc,
-._4coo,
-._o46:not(._nd_) ._454y ._1mj1,
-._1pka ._49no,
-._1pka ._2abm,
-._1pka ._5exl {
-    transition: border-bottom-color 0.5s !important;
-}
-
-
-
-
-
-
-
-/* --------------------------------------------------------------------------- */
-
-body,
-body ._4sp8,
-body ._4eby,
-body ._59s7,
-body ._3s-4,
-body ._2y8_,
-body ._1sk6,
-body ._5pw9,
-body ._58ahm,
-body ._80cm {
-    background: #222222 !important;
-}
-
-/*body ._4sp8 {
-    background-image: url("image.jpg") !important;
-    background-size: cover !important;
-}*/
-
-body ._2y8_ {
-    border: 1px solid rgba(255, 255, 255, .60) !important;
-}
-
-/* Borders */
-body ._673w,
-body ._36ic,
-body ._374b,
-body ._2y8y {
-    border-bottom: 1px solid rgba(255, 255, 255, .10) !important;
-}
-
-body ._llj {
-    border-bottom: 1px solid rgba(255, 255, 255, .05) !important;
-}
-
-body ._1t2u {
-    border-left: 1px solid rgba(255, 255, 255, .20) !important;
-}
-
-body ._4_j5 {
-    border-left: 1px solid rgba(255, 255, 255, .10) !important;
-}
-
-body ._4rv3,
-body ._1li-,
-body ._3war,
-body ._3wax {
-    border-top: 1px solid rgba(255, 255, 255, .10) !important;
-}
-
-/* Text */
-body h1,
-body h2,
-body h3,
-body h4,
-body h5,
-body h6,
-body ._5pwa,
-body ._5pw6,
-body .__6k,
-body .__6l,
-body ._50f9,
-body ._8slc,
-body ._3cn0,
-body ._3cnl,
-body ._3cnn a,
-._3cnj {
-    color: #e2ded6 !important;
-}
-
-body textarea,
-body keygen,
-body select {
-    color: #bfc3c8 !important;
-}
-
-body ._2v6o,
-body ._5eu7,
-body ._3eus,
-body ._5uh,
-body ._3x6v,
-body ._5rh4,
-body ._5qsj,
-body ._497p,
-body ._5i_d .__6m,
-body ._1r3o,
-body ._374c,
-body ._3q35,
-body ._2y8z,
-body ._2mjl,
-body ._1n-e,
-body ._4dx5,
-body ._38wl,
-body ._4x7m,
-body ._4x79,
-body ._4x7b,
-body ._7ht_,
-body ._6zkf,
-body ._1mr_,
-body ._1mq-,
-body ._1jw-,
-body ._51l0 ._1-sv {
-    color: rgba(255, 255, 255, .40) !important;
-}
-
-body,
-body ._3szq,
-body ._4rph ._4rpj,
-body ._364g,
-body ._2jnv,
-body ._2jnx,
-body ._2jnz,
-body ._2jnx ._30e7 ._5j5f,
-body ._5i_d .__6k,
-body ._5i_d .__6l,
-body ._3wa-,
-body ._3wb0,
-body ._2c9i ._19jt,
-body ._4ng2,
-body ._3q34,
-body ._36zg,
-body ._hh7 a:not(._ih-),
-body ._3eur._6ybk a,
-body ._7q1q,
-body ._6ct8._6y58,
-body ._1jx6,
-body ._217a ._t5c ._5jdu,
-body ._217a ._t5c ._5jdu._42fr {
-    color: white !important;
-}
-
-body input:not(._5eay):not(._1frb):not(._58al) {
-    background-color: black !important;
-    color: #e3e1de !important;
-}
-
-/* --------------------------------------------------------------------------- */
-
-/* Transition from unread to read */
-
-/* ._1ht6 = name, ._1ht7 = time, ._1htf = message, ._1ht3 = unread */
-
-._1ht6,
-._1ht7,
-._1htf {
-    transition: color 0.5s, font-weight 0.5s !important;
-}
-
-._1ht1:active ._1ht6,
-._1ht1:active ._1ht7,
-._1ht1:active ._1htf {
-    transition: color 0.0s !important;
-}
-
-body ._1ht6,
-body ._1ht1:active ._1ht6 {
-    color: white !important;
-}
-
-body ._1ht7,
-body ._1ht1:active ._1ht7 {
-    color: rgba(255, 255, 255, .40) !important;
-}
-
-body ._1ht3 ._1ht7,
-body ._1ht3:active ._1ht7 {
-    color: #0084ff !important;
-}
-
-body ._1htf,
-body ._1ht1:active ._1htf {
-    color: rgba(102, 102, 102, 1) !important;
-}
-
-body ._1ht3 ._1htf,
-body ._1ht3:active ._1htf {
-    color: white !important;
-}
-
-/* --------------------------------------------------------------------------- */
-
-body ._225b {
-    background-color: rgba(255, 255, 255, .03) !important;
-    color: rgba(255, 255, 255, .40) !important;
-}
-
-body label {
-    color: #999999 !important;
-}
-
-body ._5i_d {
-    border: 1px solid #303030 !important;
-    background-color: #303030 !important;
-}
-
-body ._618l,
-body ._3b4u {
-    color: rgba(255, 255, 255, .75) !important;
-}
-
-body ._618n,
-body ._6cs7,
-body ._2f5n ._29ey {
-    color: #rgba(255, 255, 255, .60) !important;
-    background-color: #303030 !important;
-}
-
-body hr {
-    background: #262626 !important;
-    color: #262626 !important;
-}
-
-body ._2c9i ._4ebz,
-body ._4dx4 {
-    border-bottom: 1px solid rgba(255, 255, 255, .10) !important;
-}
-
-body ._koh {
-    border-bottom: 1px solid #171717 !important;
-}
-
-body ._koh li:not(.selected),
-body ._7492,
-body ._74ku,
-body ._4k7a,
-body ._67tw,
-body ._4lh7 {
-    color: rgba(255, 255, 255, .5) !important;
-}
-
-body ._3m31:nth-of-type(3n+1) {
-    border-right: 2px solid black !important;
-}
-
-body ._3m31:nth-of-type(3n+2) {
-    border-left: 1px solid black !important;
-    border-right: 1px solid black !important;
-}
-
-body ._3m31:nth-of-type(3n+3) {
-    border-left: 2px solid black !important;
-}
-
-body ._33p7 {
-    background-color: rgba(0, 0, 0, .95) !important;
-    border-bottom: 1px solid rgba(255, 255, 255, .10) !important;
-}
-
-body ._2615 {
-    background-color: rgba(255, 255, 255, .10) !important;
-}
-
-body ._517h {
-    color: #b4b0a9 !important;
-}
-
-body ._jf4 ._jf3 {
-    background-color: rgba(255, 255, 255, .10) !important;
-    color: rgba(255, 255, 255, .40) !important;
-}
-
-body ._1ht1._1ht2,
-body ._1ht1._1ht2 ._6zkc {
-    background-color: rgba(255, 255, 255, .07) !important;
-}
-
-body ._1ht1:hover {
-    background-color: rgba(255, 255, 255, .07) !important;
-}
-
-body ._1ht1:active {
-    background-color: rgba(255, 255, 255, .10) !important;
-}
-
-body ._1suj {
-    color: rgb(0, 132, 255) !important;
-}
-
-body ._1suk {
-    color: rgba(255, 255, 255, .20) !important;
-}
-
-body .uiInputLabel .__rm+.uiInputLabelLabel {
-    color: rgba(255, 255, 255, .88) !important;
-}
-
-body ._4-hy ._3ixn {
-    background-color: rgba(255, 255, 255, .4) !important;
-}
-
-body ._7jxv {
-    background: rgba(0, 0, 0, .4) !important;
-}
-
-body ._5iwm ._58al,
-body ._3rh0 {
-    background-color: #0a0908 !important;
-}
-
-body ._5iwm ._58al::placeholder {
-    color: rgba(255, 255, 255, .4) !important;
-}
-
-body ._5pw9 {
-    border-color: #22201d !important;
-}
-
-body ._58ah {
-    border-color: rgb(34, 32, 29) !important;
-}
-
-body ._58al {
-    color: rgb(226, 222, 214) !important;
-}
-
-body ._4x7m {
-    background: rgba(255, 255, 255, .05) !important;
-}
-
-body ._3wb1,
-body ._3way {
-    border: 1px solid #191919 !important;
-}
-
-body ._3nta {
-    background: black !important;
-    border-bottom: 1px solid rgba(255, 255, 255, .10) !important;
-}
-
-body ._3nta:hover {
-    background-color: #0a0908 !important;
-}
-
-body ._1liy ._1lj0:hover,
-body ._5l37:hover,
-body ._5l37:active,
-body ._1k1p {
-    background-color: rgba(255, 255, 255, .05) !important;
-}
-
-body ._2jnv:hover {
-    border: 1px solid rgba(255, 255, 255, .10) !important;
-}
-
-body ._4rv6 {
-    filter: invert(100%) !important;
-    opacity: .6 !important;
-}
-
-body a._4ce_ {
-    filter: invert(100%) !important;
-    opacity: .7 !important;
-}
-
-body mask+rect {
-    fill: black !important;
-}
-
-body ._6ymu,
-body ._6-xp,
-body ._6ybv,
-body ._6y56,
-body ._6ybz:not(._7ipg),
-body ._7hu0,
-body ._7hty,
-body ._7-_v,
-body ._7hu1,
-body ._5zvq._7i2o:hover,
-body ._3-wv._7i2n:hover,
-body ._2rvp._7i2l:hover,
-body ._7kpk {
-    background-color: rgba(255, 255, 255, .12) !important;
-}
-
-body path#Fill-1,
-body path#Fill-2,
-body path#Fill-8,
-body path#Fill-19,
-body path#Fill-23,
-body path#Fill-24,
-body ._7i2o:hover path,
-body ._7i2n:hover path#Fill-19,
-body ._7i2l:hover path#Fill-1,
-body ._80cm ._7oal path {
-    fill: white !important;
-}
-
-body a[aria-label="Create a poll"] path#Fill-1 {
-    fill: inherit !important;
-}
-
-body ._7i2o path,
-body ._7i2n path#Fill-19,
-body ._7i2l path#Fill-1 {
-    fill: rgba(255, 255, 255, 0.34) !important;
-}
-
-body ._1hbw ._5pd7 {
-    background-color: rgba(255, 255, 255, 0.6) !important;
-}
-
-body ._7301._hh7,
-body ._7301._hh7._hh7._6ybn {
-    background-color: black !important;
-    border-color: rgba(255, 255, 255, .1) !important;
-    color: rgba(255, 255, 255, .4) !important;
-}
-
-body ._18p0,
-body ._1jx4 {
-    border-top-color: rgba(255, 255, 255, .1) !important;
-}
-
-body ._7q0v,
-body ._7q1i,
-body ._7q1l,
-body ._7q1p._7q1l,
-body ._7q1m,
-body ._7q1n,
-body .__6j._43kk {
-    border-color: #303030 !important;
-}
-
-body ._41ud ._o46:not(._nd_) ._hh7:not(._2f5r):not(._7301) {
-    background-color: rgb(50, 51, 52) !important;
-    color: white !important;
-}
-
-body ._aou,
-body ._4kf5 {
-    background: rgb(86, 87, 88) !important;
-}
-
-body ._4kf6:not(._fy2) {
-    color: rgb(181, 181, 181) !important;
-}
-
-body ._7q1p {
-    background-color: rgb(50, 51, 52) !important;
-}
-
-body ._80co {
-    background: rgba(0, 0, 0, .5) !important;
-}
-
-body ._4dfu {
-    background-image: linear-gradient(to right, black, rgba(44, 44, 44, .45), black) !important;
-}
-
-body ._44ju ._44jz {
-    color: white !important;
-}
-
-body ._44ju {
-    text-decoration-color: white !important;
-}
-
-body ._1ht1._6zk9._1ht2,
-body ._1ht1._6zk9:hover {
-    background: transparent !important;
-}
-
-body ._2f5n {
-    background-color: #303030 !important;
-    border-color: #303030 !important;
-}
-
-body .__6m,
-body ._50f8,
-body ._50cx:not(._50cy) {
-    color: #6f6b63 !important;
-}
-
-body ._5irm._7mkm,
-body ._7mki,
-body ._49no {
-    background-color: black !important;
-}
-
-body ._kmc ._1p1t {
-    color: #333 !important;
-    -webkit-text-fill-color: initial !important;
-}
-
-body ._7t1o {
-    background-color: #050505 !important;
-}
-
-body ._71bm._71bn,
-body ._71bo._71bm:hover,
-body ._3b4t,
-body ._2m5p {
-    border-color: rgba(255, 255, 255, .1) !important;
-}
-
-body ._3b4h {
-    background-color: #090909 !important;
-}
-
-body ._ric,
-body ._4mnq {
-    background-color: #14120f !important;
-    border-color: black !important;
-}
-
-body ._kmc._7kpg ._1p1t {
-    color: rgba(255, 255, 255, .5) !important;
-    -webkit-text-fill-color: initial !important;
-}
-
-body ._4_j4 .chatAttachmentShelf {
-    background-color: black !important;
-    border-top-color: #332f2a !important;
-}
-
-body ._8i1 {
-    background: rgba(0, 0, 0, .95) !important;
-}
-
-body ._13iv ._5l37:active,
-body ._13iv ._1k1p,
-body ._13iv ._5l37:hover {
-    background-color: #242424 !important;
-}
-
-body ._4lh2 {
-    background-color: black !important;
-    border-bottom-color: rgba(255, 255, 255, .20) !important;
-    border-top-color: rgba(255, 255, 255, .20) !important;
-}
-
-body ._3z54 {
-    background-color: #ccc !important;
-}
-
-body ._3z53 {
-    color: rgba(255, 255, 255, .20) !important;
-}
-
-body ._56jc {
-    border-bottom-color: #14120f !important;
-}
-
-body ._4coo {
-    border-bottom-color: #282421 !important;
-}
-
-body ._1jw_:first-child ._1jx4 {
-    border-top-color: rgba(255, 255, 255, 0) !important;
-}
-
-body ._o46:not(._nd_) ._454y ._1mj0 {
-    background-color: rgba(153, 153, 153) !important;
-    color: black !important;
-}
-
-body ._o46:not(._nd_) ._454y ._1mj1 {
-    border-bottom-color: rgba(153, 153, 153) !important;
-}
-
-body ._29_7 ._3czg ._2e-7 ._2e-1,
-body ._29_7 ._3czg ._2e-7 ._2e-2 {
-    background-color: rgba(72, 72, 72) !important;
-    color: black !important;
-}
-
-body ._1pka ._49no,
-body ._1pka ._2abm,
-body ._1pka ._5exl {
-    border-bottom-color: #111111 !important;
-}
-
-body ._2pgc {
-    background-color: #14120f !important;
-    color: #e3e1de !important;
-}
-
-body ._5r8a._5r8b {
-    background: #14120f !important;
-}
-
-body ._wsc {
-    background-color: black !important;
-}
-
-body ._53ij {
-    background-color: #202020 !important;
-    border: 1px solid #202020 !important;
-}
-
-/* hide react focus outline */
-body ._1z8r:focus {
-    outline: 0 none !important;
-}
-
-body ._8sop:focus {
-    outline: 0 none !important;
-}
-
-/* scrollbar styling */
-.uiScrollableAreaTrack {
-    background-color: transparent !important;
-}
-
-.uiScrollableAreaGripper {
-    background-color: #6d6d6d !important;
-}
-
-/* Replied to message */
-body ._3egs {
-    background-color: black !important;
-}
-
-/* Typing indicator */
-body ._4gd0 {
-    background-color: black !important;
-}
-
-/* Code blocks
-
-These can be created in Facebook as in Github by typing:
-```
-code in here
-```
-*/
-._wu0 {
-    color: white !important;
-    background-color: #222222 !important;
-    border: 1px solid #333333 !important;
+/* Feedback icons */
+.sp_BQbKIpOzOAx_1_5x, .sp_a51jIvPl6dA_1_5x {
+    filter: invert(.8);
 }
